--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: java
 services:
   - mysql
 env:
-  - TEST_SERVER=127.0.0.1
-  - TEST_USER=root
-  - TEST_PASSWORD=
+  global:
+    - TEST_SERVER=127.0.0.1
+    - TEST_USER=root
+    - TEST_PASSWORD=
 jdk:
   - oraclejdk8
   - oraclejdk11
@@ -19,6 +20,7 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 before_script:
+  - chmod +x gradlew
   - ./gradlew assemble
 script:
   - ./gradlew check
