--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-before_script:
+before_install:
   - chmod +x gradlew
-  - ./gradlew assemble
 script:
-  - ./gradlew check
+  - ./gradlew check --stacktrace --info
