Add CodeClimate support

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,15 @@ jdk:
   - openjdk8
   - openjdk10
   - openjdk11
+jobs:
+  include:
+    - jdk: openjdk8
+      before_script:
+        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        - chmod +x ./cc-test-reporter
+        - ./cc-test-reporter before-build
+      after_script:
+        - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
