--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,16 @@ jdk:
   - openjdk11
 jobs:
   include:
-    - jdk: openjdk8
+    - name: Coverage Reporter
+      jdk: openjdk8
+      env: JACOCO_SOURCE_PATH=./src/main/java
       before_script:
         - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
         - chmod +x ./cc-test-reporter
         - ./cc-test-reporter before-build
       after_script:
-        - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+        - ./cc-test-reporter format-coverage ./build/reports/jacoco/test/jacocoTestReport.xml
+        - ./cc-test-reporter upload-coverage
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
