--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ environment:
   TEST_SERVER: 127.0.0.1
   TEST_USER: root
   TEST_PASSWORD: Password12!
+  JETWAY_STDOUT_LOG_LEVEL: OFF
 services: mysql
 build: off
 test_script:
