Prevent commit fail on coverage failure

--- a/.github/workflows/ci-coverage.yml
+++ b/.github/workflows/ci-coverage.yml
@@ -17,6 +17,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    continue-on-error: true
+
     name: Ubuntu (Coverage Reporter)
     steps:
       - name: Check out repository
